--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
   "name": "vkr-lithium",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "express-generator": "^4.16.1",
+    "mysql2": "^2.3.3",
+    "pug": "^3.0.2"
+  }
 }
