--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "express-generator": "^4.16.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "pug": "^3.0.2"
   }
 }
